tests/fixtures/errors/invalid_theme_empty_name.puml
@startuml
!theme
A -> B
@enduml
